
  - Fix some Python 2.2 specific things in various tool modules.

  From Christian Engel:

  - Support more flexible inclusion of separate C and C++ compilers.

  - Use package management tools on AIX and Solaris to find where
    the comilers are installed, and what version they are.

  - Add support for CCVERSION and CXXVERSION variables for a number
    of C and C++ compilers.

  From Ralf W. Grosse-Kunstleve:

  - Accomodate anydbm modules that don't have a sync() method.

  From Stephen Kennedy:

  - Add support for a configurable global .sconsign.dbm file which
    can be used to avoid cluttering each directory with an individual
    .sconsign file.

  From John Johnson:

  - Fix (re-)scanning of dependencies in generated or installed
    header files.

  From Steven Knight:

  - The -Q option suppressed too many messages; fix it so that it only
    suppresses the Reading/Building messages.

  - Support #include when there's no space before the opening quote
    or angle bracket.

  - Accomodate alphanumeric version strings in EnsurePythonVersion().

  - Support arbitrary expansion of construction variables within
    file and directory arguments to Builder calls and Environment methods.

  - Add Environment-method versions of the following global
    functions: Action(), AddPostAction(), AddPreAction(), Builder(),
    BuildDir(), CacheDir(), Clean(), Default(), EnsurePythonVersion(),
    EnsureSConsVersion(), Environment(), Exit(), Export(), FindFile(),
    GetBuildPath(), GetOption(), Help(), Import(), Literal(),
    Local(), Platform(), Repository(), SConsignFile(), SetOption(),
    SourceSignatures(), Split(), TargetSignatures(), Tool().

  - Add the following global functions that correspond to the same-named
    Environment methods:  AlwaysBuild(), Command(), Depends(), Ignore(),
    Install(), InstallAs(), Precious(), SideEffect() and SourceCode().

  - Add the following global functions that correspond to the default